--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <!--This is the header-->
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
-            <a class="mr-5 hover:text-white">First Link</a>
-            <a class="mr-5 hover:text-white">Second Link</a>
-            <a class="mr-5 hover:text-white">Third Link</a>
-            <a class="hover:text-white">Fourth Link</a>
+            <a class="mr-5 hover:text-white">Education</a>
+            <a class="mr-5 hover:text-white">Projects</a>
+            <a class="mr-5 hover:text-white">Skillset</a>
+            <a class="hover:text-white">Socials</a>
           </nav>
           <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-white lg:items-center lg:justify-center mb-4 md:mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
-              <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-            </svg>
-            <span class="ml-3 text-xl xl:block lg:hidden">Tailblocks</span>
+            <span class="ml-3 text-xl xl:block lg:hidden italic"><span class="text-3xl bg-gray-800 text-white ml-3 xl:block lg:hidden italic hover:text-green-500">Codesciple</span>
+          </span>
           </a>
           <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
             <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Button
@@ -50,10 +48,12 @@
           </div>
         </div>
       </section>
+        <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
+
       <!--This is the education-->
-      <section class="text-gray-400 bg-gray-900 body-font">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white text-center mx-auto">Master Cleanse Reliac Heirloom</h1>
-        <div class="container px-5 py-24 mx-auto flex flex-wrap">
+      <section class="text-gray-400 bg-gray-900 body-font py-16">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white text-center mx-auto">My Projects</h1>
+        <div class="container px-5 mx-auto flex flex-wrap">
           
           <div class="flex flex-wrap w-full">
             <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
@@ -132,7 +132,9 @@
           </div>
         </div>
       </section>
+      <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!--This is the Projects-->
+  
       <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
@@ -203,6 +205,7 @@
           </div>
         </div>
       </section>
+      <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!--This is contact me-->
       <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
@@ -375,6 +378,7 @@
           <button class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
         </div>
       </section>
+      <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!-- End -->
       <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
@@ -389,6 +393,7 @@
           </div>
         </div>
       </section>
+      <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!-- Footer -->
       <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
