sorted mess & added projects

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
-            <a class="mr-5 hover:text-white">Education</a>
-            <a class="mr-5 hover:text-white">Projects</a>
-            <a class="mr-5 hover:text-white">Skillset</a>
-            <a class="hover:text-white">Socials</a>
+            <a href="#sec3" class="mr-5 hover:text-white" id="education-link">Education</a>
+            <a href="#sec4" class="mr-5 hover:text-white" id="projects-link">Projects</a>
+            <a href="#sec5"class="mr-5 hover:text-white" id="skills-link">Skills</a>
+            <a href="#sec6" class="hover:text-white" id="socials-link">Socials</a>
+            
           </nav>
           <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-white lg:items-center lg:justify-center mb-4 md:mb-0">
-            <span class="ml-3 text-xl xl:block lg:hidden italic"><span class="text-3xl bg-gray-800 text-white ml-3 xl:block lg:hidden italic hover:text-green-500">Codesciple</span>
-          </span>
+            <span class="text-3xl bg-gray-800 text-green-500 ml-3 xl:block lg:hidden italic hover:text-green-500">Codesciple</span>
+
           </a>
           <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
             <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0 animated pulse">Résumé
@@ -34,7 +35,7 @@
         </div>
       </header>
       <!--This is the hero-->
-      <section class="text-gray-400 bg-gray-900 body-font">
+      <section id="sec2"  class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Before they sold out
@@ -42,8 +43,8 @@
             </h1>
             <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Button</button>
+              <button id="scroll-button" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
+
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -54,9 +55,10 @@
         <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
 
       <!--This is the education-->
-      <section class="text-gray-400 bg-gray-900 body-font py-16">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white text-center mx-auto">My Projects</h1>
+      <section id="sec3" class="text-gray-400 bg-gray-900 body-font py-16">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white text-center mx-auto">Education</h1>
         <div class="container px-5 mx-auto flex flex-wrap">
+
           
           <div class="flex flex-wrap w-full">
             <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
@@ -133,12 +135,13 @@
             </div>
             <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="https://dummyimage.com/1200x500" alt="step">
           </div>
+        </div><button id="scroll-button" class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
         </div>
       </section>
       <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!--This is the Projects-->
   
-      <section class="text-gray-400 bg-gray-900 body-font">
+      <section id="sec4"class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Master Cleanse Reliac Heirloom</h1>
@@ -149,8 +152,8 @@
               <div class="flex relative">
                 <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/600x360">
                 <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-                  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
-                  <h1 class="title-font text-lg font-medium text-white mb-3">Shooting Stars</h1>
+                  <a href="/projects/goldenAge.html"><h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">The Golden Age of Video Games</h2></a>
+                  <a href="/projects/goldenAge.html"><h1 class="title-font text-lg font-medium text-white mb-3">Golden Age of Video Games</h1></a>
                   <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                 </div>
               </div>
@@ -159,8 +162,9 @@
               <div class="flex relative">
                 <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/601x361">
                 <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-                  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
-                  <h1 class="title-font text-lg font-medium text-white mb-3">The Catalyzer</h1>
+                  <a href="/projects/internationalDebt.html"><h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">Analyze International Debt Statistics
+                  </h2></a>
+                  <a href="/projects/internationalDebt.html"><h1 class="title-font text-lg font-medium text-white mb-3">Debt Analysis</h1></a>
                   <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                 </div>
               </div>
@@ -169,8 +173,8 @@
               <div class="flex relative">
                 <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/603x363">
                 <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-                  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
-                  <h1 class="title-font text-lg font-medium text-white mb-3">The 400 Blows</h1>
+                  <a href=""><h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">Google Capstone Case Study</h2></a>
+                  <a href=""><h1 class="title-font text-lg font-medium text-white mb-3">Cyclistic</h1></a>
                   <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                 </div>
               </div>
@@ -179,8 +183,8 @@
               <div class="flex relative">
                 <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/602x362">
                 <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-                  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
-                  <h1 class="title-font text-lg font-medium text-white mb-3">Neptune</h1>
+                  <a href=""><h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">Google Case Study</h2></a>
+                  <a href=""><h1 class="title-font text-lg font-medium text-white mb-3">BellaBeat</h1></a>
                   <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                 </div>
               </div>
@@ -204,13 +208,14 @@
                   <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                 </div>
               </div>
+            </div><button id="scroll-button" class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg" >Button</button>
             </div>
           </div>
         </div>
       </section>
       <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!--This is contact me-->
-      <section class="text-gray-400 bg-gray-900 body-font">
+      <section id="sec5"class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="text-center mb-20">
             <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-white mb-4">Raw Denim Heirloom Man Braid</h1>
@@ -377,13 +382,13 @@
                 </a>
               </nav>
             </div>
-          </div>
-          <button class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
+          </div><button id="scroll-button" class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
+
         </div>
       </section>
       <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
       <!-- End -->
-      <section class="text-gray-400 bg-gray-900 body-font">
+      <section id="sec6" class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
@@ -392,7 +397,8 @@
             <p class="leading-relaxed text-lg">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware. Man bun next level coloring book skateboard four loko knausgaard. Kitsch keffiyeh master cleanse direct trade indigo juice before they sold out gentrify plaid gastropub normcore XOXO 90's pickled cindigo jean shorts. Slow-carb next level shoindigoitch ethical authentic, yr scenester sriracha forage franzen organic drinking vinegar.</p>
             <span class="inline-block h-1 w-10 rounded bg-green-500 mt-8 mb-6"></span>
             <h2 class="text-white font-medium title-font tracking-wider text-sm">HOLDEN CAULFIELD</h2>
-            <p class="text-gray-500">Senior Product Designer</p>
+            <p class="text-gray-500">------------------</p>
+            <button id="scroll-button" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">back to the top</button>
           </div>
         </div>
       </section>
@@ -401,13 +407,10 @@
       <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
-              <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-            </svg>
-            <span class="ml-3 text-xl">Tailblocks</span>
+            <span class="ml-3 text-xl">codesciple</span>
           </a>
-          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2020 Tailblocks —
-            <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@knyttneve</a>
+          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 codesciple —
+            <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@codesciple</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <a class="text-gray-400">
