--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <section class="text-gray-400 bg-gray-900 body-font border-t-2 border-green-500">
 
       <!--This is the education-->
+      
       <section id="sec3" class="text-gray-400 bg-gray-900 body-font py-16">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white text-center mx-auto">Education</h1>
         <div class="container px-5 mx-auto flex flex-wrap">
@@ -76,8 +77,8 @@
                   </svg>
                 </div>
                 <div class="flex-grow pl-4">
-                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 1</h2>
-                  <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">MBA (Business Analytics)</h2>
+                  <p class="leading-relaxed">Currently pursuing an MBA in Business Analytics at Liverpool John Moores University, gaining skills to excel in the dynamic world of business.</p>
                 </div>
               </div>
               <div class="flex relative pb-12">
@@ -90,8 +91,8 @@
                   </svg>
                 </div>
                 <div class="flex-grow pl-4">
-                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 2</h2>
-                  <p class="leading-relaxed">Vice migas literally kitsch +1 pok pok. Truffaut hot chicken slow-carb health goth, vape typewriter.</p>
+                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">PGPM</h2>
+                  <p class="leading-relaxed">During my PGPM studies at the Institute of Management Technology (IMT), I focused on subjects such as decision sciences, financial analysis, risk management, and business analytics as an elective</p>
                 </div>
               </div>
               <div class="flex relative pb-12">
@@ -105,8 +106,8 @@
                   </svg>
                 </div>
                 <div class="flex-grow pl-4">
-                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 3</h2>
-                  <p class="leading-relaxed">Coloring book nar whal glossier master cleanse umami. Salvia +1 master cleanse blog taiyaki.</p>
+                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">B.com</h2>
+                  <p class="leading-relaxed">studied diverse subjects such as Taxation, Cost Accounting, Business Statistics, Auditing, Financial Statement Analysis, and Computerised Accounting. With an overall CGPA of 8.2</p>
                 </div>
               </div>
               <div class="flex relative pb-12">
@@ -120,7 +121,7 @@
                   </svg>
                 </div>
                 <div class="flex-grow pl-4">
-                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">STEP 4</h2>
+                  <h2 class="font-medium title-font text-sm text-white mb-1 tracking-wider">Intermediate</h2>
                   <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
                 </div>
               </div>
@@ -137,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="/img/uni.jpeg" alt="step">
+            <!--<img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="/img/uni.jpeg" alt="step">-->
           </div>
         </div><button id="scroll-button" class="flex mx-auto mt-16 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg">Button</button>
         </div>
